font issue on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,7 @@ h6 {
     font-weight: 600;
     margin-left:10px;
     margin-right: 10px;
+    text-rendering: optimizeLegibility;
 }
 
 nav {
